day1用户界面的完善

--- a/src/main/resources/templates/common/index_footer.html
+++ b/src/main/resources/templates/common/index_footer.html
@@ -18,58 +18,25 @@
                     </a>
                 </div>
                 <p>
-                    Nam liber tempor cum soluta nobis option congue nihil imperdiet doming id quod mazim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.
+                    欢迎进入我们的旅游网站
                 </p>
                 <p>
-                    <a href="#" class="btn-default btn2">Read More</a>
+                    <a href="#" class="btn-default btn2">了解更多</a>
                 </p>
             </div>
-            <div class="col-sm-3">
-                <div class="bot1_title">Travel Specialists</div>
-                <ul class="ul1">
-                    <li><a href="#">First Class Flights</a></li>
-                    <li><a href="#">Accessible Travel</a></li>
-                    <li><a href="#">Amazing Cruises</a></li>
-                </ul>
 
-                <div class="social2_wrapper">
-                    <ul class="social2 clearfix">
-                        <li class="nav1"><a href="#"></a></li>
-                        <li class="nav2"><a href="#"></a></li>
-                        <li class="nav3"><a href="#"></a></li>
-                        <li class="nav4"><a href="#"></a></li>
-                        <li class="nav5"><a href="#"></a></li>
-                        <li class="nav6"><a href="#"></a></li>
-                    </ul>
-                </div>
-
-            </div>
             <div class="col-sm-3">
-                <div class="bot1_title">Our Twitter</div>
-                <div class="twits1">
-                    <div class="twit1">
-                        <a href="#"> @travel</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-                        <div class="date">5 minutes ago</div>
-                    </div>
-                    <div class="twit1">
-                        <a href="#">@leo</a> Nam liber tempor cum soluta nobis option congue nihil imperdiet doming id quod mazim.
-                        <div class="date">2 days ago</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="bot1_title">Newsletter</div>
+                <div class="bot1_title">通讯</div>
                 <div class="newsletter_block">
-                    <div class="txt1">Inspiration, ideas, news and your feedback.</div>
+                    <div class="txt1">给我们发送你的建议</div>
                     <div class="newsletter-wrapper clearfix">
                         <form class="newsletter" action="javascript:;">
                             <input type="text" name="s" value='Email Address' onBlur="if(this.value=='') this.value='Email Address'" onFocus="if(this.value =='Email Address' ) this.value=''">
-                            <a href="#" class="btn-default btn3">SUBMIT</a>
+                            <a href="#" class="btn-default btn3">提交</a>
                         </form>
                     </div>
                 </div>
-                <div class="phone2">1-888-666-8888</div>
-                <div class="support1"><a href="#">support@templates-support.com</a></div>
+                <div class="phone2">1111111111</div>
             </div>
         </div>
     </div>
@@ -78,7 +45,7 @@
 <div class="bot2_wrapper">
     <div class="container">
         <div class="left_side">
-            Copyright &copy; 2021.Company name All rights reserved.</a>
+           有问题欢迎联系我们1947181994@qq.com</a>
         </div>
         <div class="right_side"></div>
     </div>
