--- a/src/main/resources/templates/page/food.html
+++ b/src/main/resources/templates/page/food.html
@@ -3,52 +3,37 @@
 <head>
     <meta charset="UTF-8"/>
     <title>美食推荐</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Your description"/>
-    <meta name="keywords" content="Your keywords"/>
-    <meta name="author" content="Your name"/>
-
-    <link href="css/bootstrap.css" th:href="@{/css/bootstrap.css}" rel="stylesheet">
-    <link href="css/font-awesome.css" th:href="@{/css/font-awesome.css}" rel="stylesheet">
-    <link href="css/touchTouch.css" th:href="@{/css/touchTouch.css}" rel="stylesheet">
-    <link href="css/isotope.css" th:href="@{/css/isotope.css}" rel="stylesheet">
-    <link href="css/animate.css" th:href="@{/css/animate.css}" rel="stylesheet">
-    <link href="css/select2.css" th:href="@{/css/select2.css}" rel="stylesheet">
-    <link href="css/smoothness/jquery-ui-1.10.0.custom.css" th:href="@{/css/smoothness/jquery-ui-1.10.0.custom.css}"
-          rel="stylesheet">
-    <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     　　<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="../../static/js2/page.js"></script>
-
-    <script src="js/jquery.js" th:href="@{/js/jquery.js}"></script>
-    <script src="js/jquery-ui.js" th:href="@{/js/jquery-ui.js}"></script>
-    <script src="js/jquery-migrate-1.2.1.min.js" th:href="@{/js/jquery-migrate-1.2.1.min.js}"></script>
-    <script src="js/jquery.easing.1.3.js" th:href="@{/js/jquery.easing.1.3.js}"></script>
-    <script src="js/superfish.js" th:href="@{/js/superfish.js}"></script>
-
-    <script src="js/select2.js" th:href="@{/js/select2.js}"></script>
-
-    <script src="js/jquery.parallax-1.1.3.resize.js" th:href="@{/js/jquery.parallax-1.1.3.resize.js}"></script>
-
-    <script src="js/SmoothScroll.js" th:href="@{/js/SmoothScroll.js}"></script>
-
-    <script src="js/jquery.appear.js" th:href="@{/js/jquery.appear.js}"></script>
-
-    <script src="js/jquery.caroufredsel.js" th:href="@{/js/jquery.caroufredsel.js}"></script>
-    <script src="js/jquery.touchSwipe.min.js" th:href="@{/js/jquery.touchSwipe.min.js}"></script>
-
-    <script src="js/jquery.ui.totop.js" th:href="@{/js/jquery.ui.totop.js}"></script>
-
-    <script src="js/touchTouch.jquery.js" th:href="@{/js/touchTouch.jquery.js}"></script>
-    <script src="js/isotope.pkgd.min.js" th:href="@{/js/isotope.pkgd.min.js}"></script>
-    <script src="js/imagesloaded.pkgd.js" th:href="@{/js/imagesloaded.pkgd.js}"></script>
-
-    <script src="js/script.js" th:href="@{/js/script.js}"></script>
+    <style>
+        .thumb-isotope {
+            margin-bottom: 30px;
+        }
+        .thumbnail {
+            position: relative;
+            overflow: hidden;
+            width: 100%; /* 确保容器宽度占满父元素 */
+        }
+        .thumbnail img {
+            width: 100%;
+            height: auto;
+            display: block; /* 去掉图片间隙 */
+        }
+        .caption {
+            padding: 15px;
+        }
+        .right_side {
+            position: absolute;
+            bottom: 15px;
+            right: 15px;
+        }
+        .btn1 {
+            padding: 5px 10px;
+        }
+    </style>
 </head>
 <body>
 <!-- head 头部 -->
@@ -71,22 +56,6 @@
 
 <div id="content">
     <div class="container">
-        <!--<div id="options" class="clearfix">-->
-            <!--<ul id="filters" class="pagination option-set clearfix" data-option-key="filter">-->
-                <!--&lt;!&ndash;<li><a href="#filter" data-option-value="*" class="selected">All</a></li>&ndash;&gt;-->
-                <!--&lt;!&ndash;<li><a href="#filter" data-option-value=".isotope-filter1">tours</a></li>&ndash;&gt;-->
-                <!--&lt;!&ndash;<li><a href="#filter" data-option-value=".isotope-filter2">cruises</a></li>&ndash;&gt;-->
-                <!--&lt;!&ndash;<li><a href="#filter" data-option-value=".isotope-filter3">hotels</a></li>&ndash;&gt;-->
-            <!--</ul>-->
-        <!--</div>-->
-<!--        <div class="isotope-box">-->
-<!--            <ul class="list-group">-->
-<!--                <li class="list-group-item">Cras justo odio</li>-->
-<!--                <li class="list-group-item">Dapibus ac facilisis in</li>-->
-<!--                <li class="list-group-item">Morbi leo risus</li>-->
-<!--                <li class="list-group-item">Porta ac consectetur ac</li>-->
-<!--                <li class="list-group-item">Vestibulum at eros</li>-->
-<!--            </ul>-->
             <div id="container" class="clearfix col-sm-4" th:each="food : ${foods}">
                 <ul class="thumbnails clearfix" id="isotope-items">
                     <li class="element isotope-filter2 col-sm-12 col-xs-12">
@@ -101,11 +70,7 @@
                                         <div class="txt1" th:text="${food.title}"></div>
                                         <div class="txt2" th:text="${food.comment}"></div>
                                     </div>
-
                                     <div class="right_side"><a th:href="@{'/travel/oneFood?id='+${food.id}}" class="btn-default btn1">详情</a>
-
-                                        <!--<div class="right_side"><a href="product" class="btn-default btn1">Details</a>-->
-
                                     </div>
                                 </a>
                             </div>
@@ -116,7 +81,6 @@
 
         </div>
     </div>
-</div>
 
 <div th:include="common/index_footer :: copyfooter"></div>
 </body>
