--- a/src/main/resources/templates/page/foodDetail.html
+++ b/src/main/resources/templates/page/foodDetail.html
@@ -72,7 +72,7 @@
                 <div class="product-collateral col-lg-12 col-sm-12 col-xs-12">
                     <div class="add_info">
                         <ul id="product-detail-tab" class="nav nav-tabs product-tabs">
-                            <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> Food Description </a> </li>
+                            <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> 食品描述 </a> </li>
                         </ul>
                         <div id="productTabContent" class="tab-content">
                             <div class="tab-pane fade in active" id="product_tabs_description">
