--- a/src/main/resources/templates/page/hotels.html
+++ b/src/main/resources/templates/page/hotels.html
@@ -10,7 +10,7 @@
     </style>
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     　　<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=gJjMX1nrj6r0RXaRlLtpQmG2J2YocUNU"></script>
 </head>
 <body>
 <!-- head 头部 -->
@@ -21,8 +21,6 @@
 
     <!--<iframe class="d_iframe" width="1366px" height="768px" src="#(session.http)" id="myiframe" scrolling="no" frameborder="0"></iframe>-->
 </div>
-<!--图片-->
-<!--<div id="travel_wrapper"></div>-->
 
 <div class="breadcrumbs1_wrapper">
     <div class="container">
@@ -48,91 +46,39 @@
                             <div class="row">
                                 <div class="col-sm-4 col-md-4">
                                     <div class="select1_wrapper">
-                                        <label>City or Hotel Name:</label>
+                                        <label>城市或者酒店名称:</label>
                                         <div class="select1_inner">
                                             <select class="select2 select" style="width: 100%">
-                                                <option value="1">Enter a destination or hotel name</option>
-                                                <option value="2">Lorem ipsum dolor sit amet</option>
-                                                <option value="3">Duis autem vel eum</option>
+                                                <option value="1">输入地点和酒店名称</option>
                                             </select>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-md-2">
                                     <div class="input1_wrapper">
-                                        <label>Check-In:</label>
+                                        <label>入住时间:</label>
                                         <div class="input1_inner">
-                                            <input type="text" class="input datepicker" value="Mm/Dd/Yy">
+                                            <input type="text" class="input datepicker" value="年/月/日">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-md-2">
                                     <div class="input1_wrapper">
-                                        <label>Check-Out:</label>
+                                        <label>退房时间:</label>
                                         <div class="input1_inner">
-                                            <input type="text" class="input datepicker" value="Mm/Dd/Yy">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4 col-md-2">
-                                    <div class="select1_wrapper">
-                                        <label>Adult:</label>
-                                        <div class="select1_inner">
-                                            <select class="select2 select" style="width: 100%">
-                                                <option value="1">Room for 1 adult</option>
-                                                <option value="2">Room for 2 adult</option>
-                                                <option value="3">Room for 3 adult</option>
-                                                <option value="4">Room for 4 adult</option>
-                                            </select>
+                                            <input type="text" class="input datepicker" value="年/月/日">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-md-2">
                                     <div class="button1_wrapper">
-                                        <button type="submit" class="btn-default btn-form1-submit">Search</button>
+                                        <button type="submit" class="btn-default btn-form1-submit">查询</button>
                                     </div>
                                 </div>
                             </div>
                         </form>
                         <div class="row">
                             <div class="col-sm-3">
-
-                                <form action="javascript:;" class="form2 form2_hotels">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <div class="select1_wrapper clearfix">
-                                                <label>Adult:</label>
-                                                <div class="select1_inner">
-                                                    <select class="select2 select select3" style="width: 100%">
-                                                        <option value="1">1</option>
-                                                        <option value="2">2</option>
-                                                        <option value="3">3</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="select1_wrapper clearfix">
-                                                <label>Child:</label>
-                                                <div class="select1_inner">
-                                                    <select class="select2 select select3" style="width: 100%">
-                                                        <option value="1">1</option>
-                                                        <option value="2">2</option>
-                                                        <option value="3">3</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-
-                                <ul class="ul3">
-                                    <li><a href="#">星空旅行</a></li>
-                                    <li><a href="#">价格范围</a></li>
-                                    <li><a href="#">出发港口</a></li>
-                                    <li><a href="#">行程时间</a></li>
-                                    <li><a href="#">轮船</a></li>
-                                </ul>
 
 
                                 <div class="sm_slider sm_slider2">
@@ -145,22 +91,16 @@
                                                     <ul>
                                                         <li>
                                                             <div class="sm_slider_inner">
-                                                                <div class="txt1">Lorem ipsum dolor sit amet,
-                                                                    consectetuer adipiscing elit, sed diam nonummy nibh
-                                                                    euismod tincidunt ut laoreet dolore magna aliquam
-                                                                    erat volutpat. Ut wisi enim ad minim veniam.
+                                                                <div class="txt1">这真是一次酣畅淋漓的旅行啊
                                                                 </div>
-                                                                <div class="txt2">George Smith</div>
+                                                                <div class="txt2">张三</div>
                                                             </div>
                                                         </li>
                                                         <li>
                                                             <div class="sm_slider_inner">
-                                                                <div class="txt1">Lorem ipsum dolor sit amet,
-                                                                    consectetuer adipiscing elit, sed diam nonummy nibh
-                                                                    euismod tincidunt ut laoreet dolore magna aliquam
-                                                                    erat volutpat. Ut wisi enim ad minim veniam.
+                                                                <div class="txt1">我太爱这次旅行了
                                                                 </div>
-                                                                <div class="txt2">Adam Parker</div>
+                                                                <div class="txt2">李华</div>
                                                             </div>
                                                         </li>
                                                     </ul>
@@ -176,7 +116,7 @@
 
                                 <form action="javascript:;" class="form3 clearfix">
                                     <div class="select1_wrapper txt">
-                                        <label>Sort by:</label>
+                                        <label>排序:</label>
                                     </div>
                                     <div class="select1_wrapper sel">
                                         <div class="select1_inner">
@@ -212,7 +152,7 @@
                                                 </figure>
                                                 <div class="caption">
                                                     <div class="txt1" th:text="${attr.name}"></div>
-                                                    <div class="txt2">Twin / Double Room</div>
+                                                    <div class="txt2">人/间</div>
                                                     <div class="txt3 clearfix">
                                                         <div class="left_side">
                                                             <div class="price" >￥<span th:text="${attr.price}"></span></div>
@@ -228,8 +168,8 @@
                                     <br>
                                     <div class="pager_wrapper" style="padding-top: 10px">
                                         <ul class="pager clearfix" id="pages">
-                                            <li class="prev"><a th:if="${not first}" th:href="@{/dist/hotels(start=${number -1})}">Previous</a></li>
-                                            <li class="next"><a th:if="${not last}" th:href="@{/dist/hotels(start=${number+1})}">Next</a></li>
+                                            <li class="prev"><a th:if="${not first}" th:href="@{/dist/hotels(start=${number -1})}">上一页</a></li>
+                                            <li class="next"><a th:if="${not last}" th:href="@{/dist/hotels(start=${number+1})}">下一页</a></li>
                                         </ul>
                                     </div>
                             </div>
