--- a/src/main/resources/templates/page/strategyDetail.html
+++ b/src/main/resources/templates/page/strategyDetail.html
@@ -3,11 +3,6 @@
 <head>
     <meta charset="UTF-8"/>
     <title>攻略详情</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Your description"/>
-    <meta name="keywords" content="Your keywords"/>
-    <meta name="author" content="Your name"/>
     <!-- CSS Style -->
     <link rel="stylesheet" th:href="@{/css/style1.css}">
     　<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -59,11 +54,10 @@
 
                                     <div class="short-description">
                                         <p>交通工具: <span id="infosource" name="infosource" th:text="${oneStrategy.tool}"></span></p>
-<!--                                        <h2>美食概述</h2>-->
-<!--                                        <p th:text="${oneFood.infosource}"></p>-->
+
                                     </div>
                                     <div class="form-share">
-                                        <div class="sendtofriend-print"> <a href="javascript:print();"><i class="fa fa-print"></i> Print</a> <a href="#"><i class="fa fa-envelope-o fa-fw"></i> Send to a friend</a> </div>
+                                        <div class="sendtofriend-print"> <a href="javascript:print();"><i class="fa fa-print"></i> 打印</a> <a href="#"><i class="fa fa-envelope-o fa-fw"></i> 分享</a> </div>
                                     </div>
                                 </div>
                             </form>
@@ -73,7 +67,7 @@
                 <div class="product-collateral col-lg-12 col-sm-12 col-xs-12">
                     <div class="add_info">
                         <ul id="product-detail-tab" class="nav nav-tabs product-tabs">
-                            <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> Publisher Description </a> </li>
+                            <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> 发布者描述 </a> </li>
                         </ul>
                         <div id="productTabContent" class="tab-content">
                             <div class="tab-pane fade in active" id="product_tabs_description">
@@ -88,9 +82,6 @@
         </div>
     </div>
 </section>
-<!-- Main Container End -->
-
-
 <!--底部-->
 <div th:include="common/index_footer :: copyfooter"></div>
 
