Day2用户界面的完成

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,10 @@ body{ background: #fff;  border:0; font: 14px 'Raleway', Arial, Helvetica, sans-
 .visible {
 visibility: visible;
 }
+.link-danger {
+  color: red;
+}
+
 
 
 /* ============================= header ====================== */
