--- a/src/main/resources/templates/common/index_header.html
+++ b/src/main/resources/templates/common/index_header.html
@@ -43,7 +43,6 @@
             margin-top: -15px;
         }
 
-
     </style>
 
 </head>
@@ -93,7 +92,11 @@
                             <a href="#" class="btn-default btn2" onclick="showModal();">我的订单</a>
                         </li>
                         <li>
-                            <a href="../user/logout" class="btn-default btn2">注销</a>
+                            <a href="../dist/userInfo" class="btn-default btn2"  onclick="userInfo()">修改信息</a>
+                        </li>
+
+                        <li>
+                            <a href="../user/logout" class="btn-default btn2 ">注销</a>
                         </li>
                     </ul>
                 </div>
@@ -111,12 +114,6 @@
                     </div>
                 </header>
                 <div class="navbar navbar_ navbar-default">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
                     <div class="navbar-collapse navbar-collapse_ collapse">
                         <ul class="nav navbar-nav sf-menu clearfix">
                             <li><a href="/dist/view">首页</a></li>
