--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -15,7 +15,7 @@
     <div class="layadmin-user-login-main">
         <div class="layadmin-user-login-box layadmin-user-login-header">
             <h2>用户登录</h2>
-            <p>欢迎来到行影旅行社</p>
+            <p>欢迎来到打败携程旅游网</p>
         </div>
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
             <div class="layui-form-item">
@@ -34,7 +34,7 @@
                     </div>
                     <div class="layui-col-xs5">
                         <div style="margin-left: 10px;">
-                            <img src="https://www.oschina.net/action/user/captcha" class="layadmin-user-login-codeimg" id="LAY-user-get-vercode">
+                            <img src="/code/getVerificationCodePhoto" class="layadmin-user-login-codeimg" id="LAY-user-get-vercode">
                         </div>
                     </div>
                 </div>
@@ -59,8 +59,8 @@
 
     <div class="layui-trans layadmin-user-login-footer">
 
-        <p>© 2021
-            <a href="/dist/view" target="_blank">lizhixing.com</a>
+        <p>© 2024
+            <a href="/dist/view" target="_blank">dabaixiecheng.com</a>
         </p>
     </div>
 
@@ -104,17 +104,18 @@
                             time: 1000
                         }, function() {
                             location.href = 'view'; //后台主页
-                           // location.href="javascript:history.go(-1)"
+                            // location.href="javascript:history.go(-1)"
                         });
                     } else {
-                        layer.msg(result.message, {
-                            icon: 5
+                        layer.msg(result.msg, {
+                            icon:5
                         });
                     }
                 }
             });
         });
     });
+
 </script>
 </body>
 </html>
