--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -15,26 +15,13 @@
     <div class="layadmin-user-login-main">
         <div class="layadmin-user-login-box layadmin-user-login-header">
             <h2>用户注册</h2>
-            <p>欢迎注册立知行旅游</p>
+            <p>欢迎注册打败携程旅游</p>
         </div>
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-cellphone" for="LAY-user-login-cellphone"></label>
                 <input type="text" name="mobile" id="LAY-user-login-cellphone" lay-verify="phone" placeholder="手机" class="layui-input">
             </div>
-            <!--<div class="layui-form-item">
-                <div class="layui-row">
-                    <div class="layui-col-xs7">
-                        <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
-                        <input type="text" name="code" id="LAY-user-login-vercode" lay-verify="required" placeholder="验证码" class="layui-input">
-                    </div>
-                    &lt;!&ndash;<div class="layui-col-xs5">
-                        <div style="margin-left: 10px;">
-                            <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button>
-                        </div>
-                    </div>&ndash;&gt;
-                </div>
-            </div>-->
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
                 <input type="password" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码" class="layui-input">
@@ -71,7 +58,7 @@
 
     <div class="layui-trans layadmin-user-login-footer">
 
-        <p>© 2021 <a href="/dist/view" target="_blank">lizhixing.com</a></p>
+        <p>© 2024 <a href="/dist/view" target="_blank">dabaixiecheng.com</a></p>
 
     </div>
 
